--- a/README.adoc
+++ b/README.adoc
@@ -51,9 +51,9 @@ On startup, the application populates the database with dummy data so as to make
 
 == Components
 
-`*Flight Agency Demo*` is currently deployed to the cloud in the form of a `*Docker Swarm*` cluster.
+`*Flight Agency Demo*` is [big green yellow-background]*deployed to the cloud* in the form of a [underline]`*Docker Swarm*` cluster.
 
-The application comprises of six main components. The database has already been populated with test data. You can check each of them via the following links:
+The application comprises of [underline]*six* main components. You can directly check each of them via the [big green yellow-background]*links* below:
 
 - http://45.55.53.91:8888/flight-agency-core.yml[`flight-agency-config-server`]
 - http://45.55.53.91:8886[`flight-agency-admin-server`]
